# FESR

./: .clang-complete  .dir-locals.el  .gitignore  CMakeLists.txt  README.md  aleph.json  configuration.json  configuration.txt  fit_summary.txt  fits.csv  main.cpp  questions.org  run.sh  test.cpp
Evaluation/Aleph2014/: index.tex
Evaluation/jupyter/: wCube.ipynb
Evaluation/jupyter/.ipynb_checkpoints/: wCube-checkpoint.ipynb
FESR/: configuration.txt
FESR/src/: configuration.hpp  experimentalMoments.hpp  ope.cpp  pseudoscalar_pheno.cpp  weights.hpp
FESR/test/: alpha_s_test.cpp  chisquared_test.cpp  configuration_test.json  experimental_moments_test.cpp  mq_run_test.cpp
Mathematica/: HFLAV.nb  PSpheno.nb  aleph.json  coefficients.nb  dualityViolations.nb  runAlpha.nb  runMass.nb  runningAlphaEulersFormula.nb  weights.nb
Mathematica/QCD/: QCD.m
configurations/: 1_config.json  2_config.json
doc/: 01fits.csv  02fits.csv  _region_.tex  fits.csv  fits.tex  s0sFits.csv
doc/Aleph2014/: index.tex
docker/: Dockerfile
docker/cernlib/cernlib.web.cern.ch/cernlib/download/2006b_x86_64-slc5-gcc43-opt/lib/: index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
docker/fesr_aleph_2015/: Makefile  PSpheno.f90  RPM_const.f90  RPMmodel.f90  ToDo  VAcintD0.f90  VAcintD2.f90  VAcintD4.f90  VAcintD68.f90  VAcorrD0.f90  VAcorrD2.f90  VAcorrD4.f90  VAcorrD68.f90  VAdeltas.f90  VAmomAleph2014.f90  VAmomOpal1998.f90  VAmomOpal2012.f90  VAmomth.f90  aleph_aa.f90  aleph_vma.f90  aleph_vpa.f90  aleph_vv.f90  alphas_run.f90  cVA0_const.f90  cVA0_depen.f90  chi2DV.f90  condens.f90  dVAmomth.f90  dualvio.f90  fesr.f90  fits.txt  fits_new.txt  gauleg.f90  gauss.f90  incgam.f90  matrix.f90  mq_run.f90  num_const.f90  opal98_spec.f90  params.f90  (+18 more)
docker/fesr_aleph_2015/data/: aleph14_a_140101.f90  aleph14_v_140101.f90  aleph14_vminusa_140101.f90  aleph14_vplusa_140101.f90  aleph_aa.f90  aleph_vma.f90  aleph_vpa.f90  aleph_vv.f90
docker/fesr_aleph_2015/data/exclusive/: aleph13_3pi.txt  aleph13_3pipi0.txt  aleph13_pi2pi0.txt  aleph13_pi3pi0.txt  aleph13_pipi0.txt
docker/fesr_aleph_2015/figs/: Makefile  aleph14_v.m  aleph14_vpa.m  aleph_a.eps  aleph_a.par  aleph_a_high.eps  aleph_v.eps  aleph_v.par  aleph_v_high.eps  aleph_vpa.eps  aleph_vpa.par  aleph_vpa_high.eps  aleph_vv.m  fit_aleph14_a.f90  fit_aleph14_v.f90  fit_aleph14_vpa.f90  plot_aleph_a  plot_aleph_v  plot_aleph_vpa  plot_aleph_vv.f90  plot_mom
docker/fesr_aleph_2015/figs/pipole/: Rvpa.par  Rvpa.ps  plot_Rvpa
interface/: index.html
jupyter/: s0Dependence.ipynb
jupyter/.ipynb_checkpoints/: s0Dependence-checkpoint.ipynb
lib/cRunDec/: CRunDec.h
plots/: main.py
src/: adler_function.cpp  adler_function.hpp  alpha_s.cpp  alpha_s.hpp  alphas.hpp  chisquared.cpp  chisquared.hpp  condensates.hpp  configuration.cpp  configuration.hpp  constants.hpp  data.hpp  duality_violations.cpp  duality_violations.hpp  experimentalMoments.cpp  experimentalMoments.hpp  minuit.hpp  mq_run.hpp  numerics.cpp  numerics.hpp  ope.cpp  ope.hpp  pion_pole.hpp  pseudoscalar_pheno.hpp  s0_sets.hpp  state.hpp  theoretical_moments.cpp  theoretical_moments.hpp  types.hpp  utils.cpp  utils.hpp  va_deltas.hpp  weights.hpp
test/: adler_function_test.cpp  alpha_s_test.cpp  chisquared_test.cpp  condensates_test.cpp  configuration_test.cpp  configuration_test.json  configuration_test2.json  constants_test.cpp  data_test.cpp  duality_violations_test.cpp  experimental_moments_test.cpp  mq_run_test.cpp  numerics_test.cpp  ope_test.cpp  pion_pole_test.cpp  pseudoscalar_pheno_test.cpp  theoretical_moments_test.cpp  weights_test.cpp
